--- a/html/home_page.html
+++ b/html/home_page.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!--לא לשכוח להוסיף אייקון--> 
+    <link rel="stylesheet" href="../css/home_page.css">
+    <script src="../js/home_page.js"></script>
 </head>
 <body>
-    
+    <h1>headline</h1>
+    <h2>subtitle</h2>   
+    <div id="button1">
+        <button class="post1" onclick='postOne()'>post1</button>
+    </div>
+    <div id="button2">
+        <button class="post2" onclick='postTwo()'>post2</button>
+    </div>
+    <div id="button3">
+        <button class="post3" onclick='postThree()'>post3</button>
+    </div>
 </body>
 </html>
