added media folder, added favicon

--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opening</title>
     <!--לא לשכוח להוסיף אייקון--> 
-    <link rel="stylesheet" href="css/opening.css">
+    <link rel="icon" type="image/x-icon" href="media/TAlogo.png">
+    <link rel="stylesheet" href="css/mainPage.css">
     <script src="js/opening.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>headline</h1>
-    <h2>subtitle</h2>
-    <div id="description">
-        <h3>description</h3>
-    </div>
-    <div id="home_button">
-        <button class="home_page_button" onclick='homePage()'>move to the home page</button>
-    </div>
+<body dir="rtl">
+   <h1>שלום שלום</h1>
 </body>
 </html>
