--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="icon" type="image/x-icon" href="media/TAlogo.png">
     <link rel="stylesheet" href="css/mainPage.css">
     <script src="js/opening.js"></script>
+    <script src="js/insert.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body dir="rtl">
+    <header-component></header-component>
    <h1>שלום שלום</h1>
 </body>
 </html>
