--- a/html/money.html
+++ b/html/money.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--לעשות פביקון-->
     <link rel="stylesheet" href="../css/money.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body dir="rtl">
-    <div id="div">
+    <div id="money">
         <h1>העברת כספים</h1>
-        <h2>הכספים מעוברים לגורם ממשלתי ומשם מועבר לאיגונים שונים</h2>
+        <h2>הכספים עוברים דרך גורם ממשלתי לארגון</h2>
         <form action="">
-            <h3>הכנס שם ושם משפחה<h3>
+            <h3>הכנס שם פרטי ושם משפחה:<h3>
             <input type="text" id="fname" name="שם:" ><br>
-            <h3>הכנס את מספר כרטיס האשראי שלך</h3>
+            <h3>הכנס מספר כטיס אשראי:</h3>
             <input type="text" id="fname"  ><br>
-            <h3>שלוש ספרות אחרונות שלך</h3>
+            <h3>הכנס את שלושת הספרות שבגב הכרטיס:</h3>
             <input type="text" id="fname"  ><br>
-            <h3>מהו גילך? שים❤️ שאם גילך הוא קטן מ18 אין לתרום פה!</h3>
+            <h3> (רק אנשים מגיל 18 ומעלה יכולים לבצע העברה בנקאית(תרומה) דרך אתר זה)הכנס את גילך:</h3>
             <input type="number" id="tentacles" name="tentacles" min="18" max="">
             <br><br>
-            <input type="submit" value="Submit">
+            <input type="submit" id="submmiting" value="Submit">
 
   
         </form>
