--- a/index.html
+++ b/index.html
@@ -3,18 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opening</title>
-    <!--לא לשכוח להוסיף אייקון--> 
-    <link rel="icon" type="image/x-icon" href="media/TAlogo.png">
+    <script src="js/mainPage.js"></script>
+    <title>Welcome!</title>
+    <link rel="icon" type="image/x-icon" href="media/TALogo.png">
     <link rel="stylesheet" href="css/mainPage.css">
     <script src="js/opening.js"></script>
-    <script src="js/insert.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body dir="rtl">
-    <header-component></header-component>
-   <h1>שלום שלום</h1>
+    <nav id="mainNav">
+        <div class="logo">
+            <a href="index.html">
+                <img id="headerLogo" src="media/TAlogoYellow.png">
+            </a>
+        </div>
+        <ul>
+            <li>
+                <a href="index.html">עמוד בית</a>
+                </li>
+            <li>
+                <li>
+                    <div class="dropdown">
+                        <a href="#" class="drplink">קטגורית ארגון</a>
+                        <div class="dropdown-content">
+                        <a href="#">צה"ל</a>
+                        <a href="#">קמפיין חטופים</a>
+                        <a href="#">מפוני הישובים</a>
+                        </div>
+                      </div>
+                <li>
+            <li>
+                    <a href="#" class="drplink">הסברה</a></li>
+        </ul>
+        </nav>
+        <section id="section1">
+            <div id="images">
+                <div id="logoImage">
+                    <img id="two" src="/media/TAlogoWithText.png">
+                </div>
+            </div>
+        </section>
+        <section id="section2">
+            <div id="information">
+                <h1>אז מי אנחנו בעצם?</h1>
+                <h1>ב Togetherness Alliance, אנחנו מספקים לכם דרך נוחה, מסודרת וכיפית לעשות משהו שהייתם עושים בכל מקרה, התנדבות! </h1>
+                <h1>אז תנסו את האתר שלנו, ותתרמו לחברה!</h1>
+                
+            </div>
+        </section>
+        
 </body>
 </html>
