added product files

--- a/html/categoryOfDonation.html
+++ b/html/categoryOfDonation.html
@@ -16,12 +16,12 @@
     <h1>בחרו במה תרצו לתרום/ לעסוק</h1>
     <div class="buttons">
         <div id="top_container">
-            <button id="button" class="A" onclick='postOne()'>הסברה</button>
-            <button id="button" class="B" onclick='postTwo()'>קמפיין חטופים</button>
+            <button class="button" id="A" onclick='postOne()'>הסברה</button>
+            <button class="button" id="B" onclick='postTwo()'>בתי חולים</button>
         </div>
         <div id="bottom_container">
-            <button id="button" class="C" onclick='postTwo()'> תרומה והתנדבות בשביל החיילים</button>
-            <button id="button" class="D" onclick='postTwo()'> תרומה והתנדבות בשביל מפוני הדרום והצפון</button>
+            <button class="button" id="C" onclick='postTwo()'> תרומה והתנדבות בשביל החיילים</button>
+            <button class="button" id="D" onclick='postTwo()'> תרומה והתנדבות בשביל מפוני הדרום והצפון</button>
         </div>
     </div>
 
