--- a/html/categoryOfDonation.html
+++ b/html/categoryOfDonation.html
@@ -11,17 +11,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <script src="../js/categoryOfDonation.js"></script>
 </head>
 <body dir="rtl">
+    
     <h1>בחרו במה תרצו לתרום/ לעסוק</h1>
     <div class="buttons">
         <div id="top_container">
-            <button class="button" id="A" onclick='postOne()'>הסברה</button>
-            <button class="button" id="B" onclick='postTwo()'>בתי חולים</button>
+            <button class="button" id="A" onclick='explanationFunction()'>הסברה</button>
+            <button class="button" id="B" onclick='hospitalsFunction()'>בתי חולים</button>
         </div>
         <div id="bottom_container">
-            <button class="button" id="C" onclick='postTwo()'> תרומה והתנדבות בשביל החיילים</button>
-            <button class="button" id="D" onclick='postTwo()'> תרומה והתנדבות בשביל מפוני הדרום והצפון</button>
+            <button class="button" id="C" onclick='soldiersFunction()'> תרומה והתנדבות בשביל החיילים</button>
+            <button class="button" id="D" onclick='evacueesFunction()'> תרומה והתנדבות בשביל מפוני הדרום והצפון</button>
         </div>
     </div>
 
