--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <li>
                 <li>
                     <div class="dropdown">
-                        <a href="#" class="drplink">קטגורית ארגון</a>
+                        <a class="drplink" href="html/categoryOfDonation.html">קטגורית ארגון</a>
                         <div class="dropdown-content">
-                        <a href="#">צה"ל</a>
-                        <a href="#">קמפיין חטופים</a>
-                        <a href="#">מפוני הישובים</a>
+                        <a href="html/donationProduct/soldiers.html">צה"ל</a>
+                        <a href="html/donationProduct/hospitals.html">בתי חולים</a>
+                        <a href="html/donationProduct/settlementEvacuees.html">מפוני הישובים</a>
                         </div>
                       </div>
                 <li>
             <li>
-                    <a href="#" class="drplink">הסברה</a></li>
+                <a href="#" class="drplink">הסברה</a></li>
         </ul>
         </nav>
         <section id="section1">
