--- a/html/donationProduct/settlementEvacuees.html
+++ b/html/donationProduct/settlementEvacuees.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    
+    <script src="../../js/product.js"></script>
     <script src="../../js/categoriesProducts/games.js"></script>
     <script src="../../js/categoriesProducts/money.js"></script>
     <script src="../../js/categoriesProducts/food.js"></script>
@@ -21,6 +21,7 @@
 </head>
 
 <body dir="rtl">
+    
     <h1 id="titleDonationProduct">סוג התרומה שלכם🤩</h1>
     <h2 id="secondaryTitle">תרמו למפוני היישובים מהעוטף ומהצפון!</h2>
     <div id="divproducts">
