--- a/html/donationProduct/hospitals.html
+++ b/html/donationProduct/hospitals.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation Product</title>
-    <link rel="icon" type="image/x-icon" href="media/TAlogo.png">
     <link rel="stylesheet" href="../../css/donationProduct.css">
-    
+    <link rel="icon" type="image/x-icon" href="../../media/TALogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
